kubernetes/apps/media/immich/app/proxy/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: immich
  namespace: media
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames:
    - "immich.${DOMAIN}"
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: immich-proxy
          port: 8080
          weight: 1
