kubernetes/apps/media/immich/app/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: media
spec:
  ingressClassName: cilium
  rules:
  - host: "immich.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: immich-proxy
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "immich.${DOMAIN}"
